apps/homelab/network-optimizer/akron/patch-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-optimizer
  namespace: apps
spec:
  selector:
    matchLabels:
      site: akron
  template:
    metadata:
      labels:
        site: akron
    spec:
      containers:
        - name: network-optimizer
---
apiVersion: v1
kind: Service
metadata:
  name: network-optimizer
  namespace: apps
spec:
  selector:
    site: akron
